src/dwv-component.css
/* progress bar */
progress {
  appearance: none;
  -webkit-appearance: none;
  width: 100%;
  height: 5px;
  border: 0;
  z-index: 100;
}

/* dwv */
.dwv {
  display: flex;
  flex-direction: column;
}
.layerGroup {
  position: relative;
  padding: 0;
  display: flex;
  justify-content: center;
  height: 100%;
  /* occupy space left by panel */
  flex: 1;
}
.layer {
  position: absolute;
  pointer-events: none;
}

/* drag&drop */
.dropBox {
  text-align: center;
  width: 50%;
}
.dropBoxBorder {
  margin: 20px auto;
  border: 5px dashed #ccc;
}
.dropBoxBorder:hover {
  margin: 20px auto;
  border: 5px dashed #cc0;
}
#input-file-link {
  text-decoration-line: underline;
}

/* content */
.content {
  /* occupy space left by header and footer */
  flex: 1;
  display: flex;
}

/* header */
.header {
  font: 14px arial, sans-serif;
  margin-bottom: 5px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.toolbar-item {
  margin: 10px 3px;
  height: 40px;

  display: flex;
  align-items: center;
  gap: 0;
}
.toolbar-item button {
  height: 100%;
  border-radius: 4px;
  padding: 10px;
}

.select-wrapper {
  height: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}
.select-wrapper select {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  appearance: none;
  -webkit-appearance: none;
}
.select-wrapper button {
  padding: 0;
  margin: 0 0 0 1px;
}
.select-wrapper select:enabled:hover {
  cursor: pointer;
}

input[type=color] {
  width: 27px;
  height: 27px;

  border: 1px solid #e0e0e0;
  background-color: #fff;
  color: #757575;
}

button {
  border: 1px solid #e0e0e0;
  background-color: #fff;
  color: #757575;
}
button:enabled:hover {
  background-color: #f5f5f5;
  cursor: pointer;
}
button:disabled {
  color: #bdbdbd;
}
button.active {
  background-color: #f0f1f9 !important;
}
button:enabled path {
  fill: #757575;
}
button.active:enabled path {
  fill: #4a5bb9;
}
button:disabled path {
  fill: #bdbdbd;
}

/* footer */
.footer {
  text-align: center;
  font-size: 8pt;
  margin: 1em;
}

/* side panel */
.sidepanel {
  padding: 5px;
  width: 25px;

  background-color: #efefef;
  color: black;

  overflow: auto;
}

.sidepanel .togglebtn {
  border: 0;
  background-color: #111;
  color: white;
  cursor: pointer;
}

.sidepanel .togglebtn:hover {
  color: #f1f1f1;
}

.sidepanel-content {
  display: none;
}

.resizer {
  display: none;

  width: 5px;
  background-color: #555;
  cursor: col-resize;
  user-select: none;
}
.resizer:hover, .resizer:active {
  background-color: blue;
}

/* annotation */
.annotationgroup-list {
  list-style-type: none;
  padding: 5px;

  .li-header {
    padding-bottom: 10px;
  }

  #addannotationgroupitem {
    display: none;
  }
}
.annotation-list {
  list-style-type: none;
  padding: 0;
}
.annotation-list li {
  background-color: #dfdfdf;
  padding: 5px;
  margin-bottom: 5px;
  display: flex;
  .annotation-text {
    flex: 1;
  }
}

/* modal dialog */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */

  .modal-content {
    background-color: #fefefe;
    margin: 5% auto; /* 5% from the top and centered */
    padding: 20px;
    width: 80%;
    height: 80%;
    overflow: auto;
  }

  input, label {
    vertical-align: middle;
    margin-right: 10px;
  }

  .modal-content-scroll {
    margin-right: 20px;
    height: 80%;
    overflow: auto;

    table {
      width: 100%;
      border-collapse: collapse;
    }
    tr {
      border: solid thin;
      border-color: #ddd;
    }
    th {
      text-align: left;
    }
    td, th {
      padding: 10px;
    }
  }
}

/* color-scheme */
@media (prefers-color-scheme: dark) {
  .sidepanel {
    background-color: #333;
    color: #fff;
  }
  input[type=color] {
    border: 1px solid #2f2f2f;
    color: #fff;
    background-color: #333;
  }
  button {
    border: 1px solid #2f2f2f;
    background-color: #333;
    color: #fff;
  }
  button:enabled:hover {
    background-color: #555;
  }
  button:disabled {
    color: #aeaeae;
  }
  button.active {
    background-color: #404040 !important;
  }
  button:enabled path {
    fill: #fff;
  }
  button:disabled path {
    fill: #aeaeae;
  }
  .footer a {
    color: #ccc;
  }
  .annotation-list li {
    background-color: #444;
  }

  .modal {
    .modal-content {
      background-color: #424242;
    }
    .modal-content-scroll {
      tr {
        border: solid thin;
        border-color: #666;
      }
    }
  }
}

